add frm hoa don nhap