@@ -28,14 +28,6 @@
     <build>
         <plugins>
             <!-- Plugin để biên dịch với Java -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version> <!-- hoặc bản mới nhất -->
-                <configuration>
-                    <release>24</release>
-                </configuration>
-            </plugin>
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -43,6 +35,17 @@
                 <version>3.1.0</version>
                 <configuration>
                     <mainClass>com.tuandat.cuahanggas.CuaHangGas</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <release>24</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
